Switch to guaranteed stable ordered collection (#529)